--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,24 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      OnceSaid
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>
+        <ion-chip color="primary" *ngFor="let tag of this.Quote.tags" >
+          <ion-label color="primary">{{tag}}</ion-label>
+        </ion-chip>
+      </ion-card-subtitle>
+      <ion-card-title>{{this.Quote.author}}</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      {{this.Quote.quote}}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
